--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </a>
 </div>
 
-<!--div id="debugDiv">
+<div id="debugDiv">
   <div class="container">
     <div class="row">
       <p id="phdbg"></p>
@@ -51,7 +51,7 @@
         <input id="phdbgBtn" type="button" value="Clear" onclick="phdbgClear()" class="btn">
     </div>
   </div>
-</div-->
+</div>
 
 <div id="connectingDiv" class="hiddenitemdiv">
   <h3>Connection</h3>
@@ -1436,14 +1436,17 @@ if ('serviceWorker' in navigator)
 //
 //=====================================================
 
-//const phdbg = document.querySelector("#phdbg");
+const phdbg = document.querySelector("#phdbg");
 //var phdbgc = 0;
 var menuDisabled=false;
 
-//function phdbgClear()
-//{
-//    phdbg.innerHTML = "";
-//}
+function phdbgClear()
+{
+    if (phdbg)
+    {
+        phdbg.innerHTML = "";
+    }
+}
 
 var registerMode = 99;
 const cTechInstallerCompany = document.querySelector("#techInstallerCompany");
@@ -5270,7 +5273,10 @@ class blueToothDevice
             break;
 
             case DBG_INFO:
-                //phdbg.innerHTML += "<br>" + msg;
+                if (phdbg)
+                {
+                    phdbg.innerHTML += "<br>" + msg;
+                }
             break;
 
             case DBG_ERROR:
@@ -5559,7 +5565,10 @@ function onDisconnected(event)
   connectingState.innerHTML = "Device disconnected";
   cConnectBtn.value = "Connect";
   
-  //phdbg.innerHTML = "";
+  if (phdbg)
+  {
+    phdbg.innerHTML = "";
+  }
 }
 
 const cConnectBtn = document.querySelector("#connectBtn");
@@ -5622,7 +5631,10 @@ function disconnect()
     showDiv("techDiv");
     connectingState.innerHTML = "Device disconnected";
     bleiface.disconnect();
-    //phdbg.innerHTML = "";
+    if (phdbg)
+    {
+        phdbg.innerHTML = "";
+    }
 }
 
 function secondTimer()
