--- a/index.html
+++ b/index.html
@@ -3573,7 +3573,7 @@ class blueToothCommission extends blueToothIf
     {
         // there are only 8 records so it fits on a page, so always just read all
         
-        setReadRecord(3);
+        this.setReadRecord(3);
     }    
     
     setRead(readValue)
