still fixing calibration history-8

--- a/index.html
+++ b/index.html
@@ -1931,7 +1931,7 @@ class historyClass
                             this.count--;
                             result = true;
                     
-                            readNext();
+                            this.readNext();
                         }
                         else
                         {
