--- a/index.html
+++ b/index.html
@@ -1931,7 +1931,7 @@ class historyClass
                             this.count--;
                             result = true;
                     
-                            this.readNext();
+                            this.readNext(item);
                         }
                         else
                         {
