Updated text for the buzzer active state-1

--- a/index.html
+++ b/index.html
@@ -5051,7 +5051,7 @@ class alarmHistoryClass extends historyClass
                 {
                     bMsgAlarms = co2MsgState; 
                 }
-                return "Buzzer " + bMsgAlarms + " (" + bMsgAlarms + ")";
+                return "Buzzer " + bMsgState + " (" + bMsgAlarms + ")";
             }            
         }
         if ((data.getUint8(12) & 0x03) != 0)
