Fixing the erase display messages-2

--- a/index.html
+++ b/index.html
@@ -4407,15 +4407,15 @@ function eraseLog(theLog)
     switch (theLog)
     {
         case 0:
-            confirmTxt = "Delete the filter log.\r\nContinue?";
+            confirmTxt = "Delete the Filter Log.\r\nContinue?";
         break;
         
         case 1:
-            confirmTxt = "Delete the alarm log.\r\nContinue?";
+            confirmTxt = "Delete the Alarm Log.\r\nContinue?";
         break;
         
         case 2:
-            confirmTxt = "Delete the running counts.\r\nContinue?";
+            confirmTxt = "Delete the Running Counts.\r\nContinue?";
         break;
     }
     if (confirm(confirmTxt))
