--- a/index.html
+++ b/index.html
@@ -1938,7 +1938,7 @@ class historyClass
                         }
                         else
                         {
-                            this.ReadDone();
+                            this.readDone();
                         }
                     break;
                 }
