Added app version

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
       </div>
     </div>
     <div class="row">
+        <p id="connectingVersion">1.00</p>
+    </div>
+    <div class="row">
       <p id="connectingTicks"></p>
       <p id="connectingState"></p>  
     </div>
