Added app version-1

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
   <h3>Connection</h3>
   <div class="container">
     <div class="row">
+        <p id="connectingVersion">Cleancab App Version: 1.00</p>
+    </div>
+    <div class="row">
       <div style="width: 100%;height: 150px;background-image: url('cleancab.png'); background-repeat: no-repeat; background-size: contain; background-position: center;">
       <!--div style="width: 100%;height: 150px;background-image: url('static/cleancab.png'); background-repeat: no-repeat; background-size: contain; background-position: center;"-->
       </div>
-    </div>
-    <div class="row">
-        <p id="connectingVersion">1.00</p>
     </div>
     <div class="row">
       <p id="connectingTicks"></p>
