Adding a third service-1

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <h3>Connection</h3>
   <div class="container">
     <div class="row">
-        <p id="connectingVersion">Cleancab App Version: 1.01-1</p>
+        <p id="connectingVersion">Cleancab App Version: 1.01-2</p>
     </div>
     <div class="row">
       <div style="width: 100%;height: 150px;background-image: url('cleancab.png'); background-repeat: no-repeat; background-size: contain; background-position: center;">
@@ -5773,7 +5773,7 @@ function connectToBluetooth()
         
         navigator.bluetooth.requestDevice({
             filters: [{name: 'CLEANCAB'}],
-            optionalServices: [bleiface.getServiceUUID(0), bleiface.getServiceUUID(1)]
+            optionalServices: [bleiface.getServiceUUID(0), bleiface.getServiceUUID(1), bleiface.getServiceUUID(2)]
         })
         .then(device => 
         {     
