--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <h3>Connection</h3>
   <div class="container">
     <div class="row">
-        <p id="connectingVersion">Cleancab App Version: 1.01-3</p>
+        <p id="connectingVersion">Cleancab App Version: 1.02</p>
     </div>
     <div class="row">
       <div style="width: 100%;height: 150px;background-image: url('cleancab.png'); background-repeat: no-repeat; background-size: contain; background-position: center;">
