--- a/index.html
+++ b/index.html
@@ -1490,7 +1490,7 @@
 
 if ('serviceWorker' in navigator) 
 {
-  navigator.serviceWorker.register('serviceworker.js')
+  navigator.serviceWorker.register('serviceworker.js', {scope: './cleancab-tech-app/'})
 //  navigator.serviceWorker.register('static/serviceworker.js')
     .then(function(registration) 
     {
