Still trying to get the service worker for different apps to work

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>CleanCab-Tech App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="styleph.css">
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="tech/manifest.json">
     <!--link rel="stylesheet" type="text/css" href="static/styleph.css"-->
     <!--link rel="manifest" href="static/manifest.json"-->
   </head>
@@ -60,7 +60,7 @@
         <p id="connectingVersion">Cleancab App Version: 1.02</p>
     </div>
     <div class="row">
-      <div style="width: 100%;height: 150px;background-image: url('cleancab.png'); background-repeat: no-repeat; background-size: contain; background-position: center;">
+      <div style="width: 100%;height: 150px;background-image: url('tech/cleancab.png'); background-repeat: no-repeat; background-size: contain; background-position: center;">
       <!--div style="width: 100%;height: 150px;background-image: url('static/cleancab.png'); background-repeat: no-repeat; background-size: contain; background-position: center;"-->
       </div>
     </div>
@@ -924,7 +924,7 @@
   <h3>Contact</h3>
   <div class="container">
     <div class="row">
-      <div style="width: 100%;height: 150px;background-image: url('cleancab.png'); background-repeat: no-repeat; background-size: contain; background-position: center;">
+      <div style="width: 100%;height: 150px;background-image: url('tech/cleancab.png'); background-repeat: no-repeat; background-size: contain; background-position: center;">
       <!--div style="width: 100%;height: 150px;background-image: url('static/cleancab.png'); background-repeat: no-repeat; background-size: contain; background-position: center;"-->
       </div>
     </div>
@@ -1490,7 +1490,7 @@
 
 if ('serviceWorker' in navigator) 
 {
-  navigator.serviceWorker.register('serviceworker.js', {scope: './cleancab-tech-app/'})
+  navigator.serviceWorker.register('tech/serviceworker.js', {scope: './cleancab-tech-app/'})
 //  navigator.serviceWorker.register('static/serviceworker.js')
     .then(function(registration) 
     {
