--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>CleanCab-Tech App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="styleph.css">
-    <link rel="manifest" href="tech/manifest.json">
+    <link rel="manifest" href="manifest.json">
     <!--link rel="stylesheet" type="text/css" href="static/styleph.css"-->
     <!--link rel="manifest" href="static/manifest.json"-->
   </head>
