Adding a test graph-1

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <div class="container">
     <div class="row">
       <div class="col-35">
-        <input id="recorderStartStop" type="button" value="Start Recording" onclick="recorderStartStop(event)" disabled="true"/>
+        <input id="recorderStartStop" type="button" value="Start Recording" onclick="recorderStartStop(event)"/>
       </div>
       <div class="col-5">
       </div>
