--- a/index.html
+++ b/index.html
@@ -5032,7 +5032,7 @@ class recorderClass
             this.chart.data.datasets[1].data.push(thePressure);
             this.chart.data.datasets[2].data.push(theCO2);
             this.index++;
-            if (this.index > 30)
+            if (this.index > 31)
             {
                 if (this.started)
                 {
@@ -5077,7 +5077,7 @@ class recorderClass
             }
             else
             {
-                startStop();
+                this.startStop();
             }
         }
     }
