--- a/index.html
+++ b/index.html
@@ -4889,7 +4889,7 @@ class recorderClass
                         title:
                         {
                             display: true,
-                            text: 'Minutes'
+                            text: 'Sample'
                         }
                     },
                     y:
@@ -5032,7 +5032,7 @@ class recorderClass
             this.chart.data.datasets[1].data.push(thePressure);
             this.chart.data.datasets[2].data.push(theCO2);
             this.index++;
-            if (this.index > 31)
+            if (this.index > 30)
             {
                 if (this.started)
                 {
