--- a/index.html
+++ b/index.html
@@ -5036,7 +5036,7 @@ class recorderClass
             {
                 if (this.started)
                 {
-                    startStop();
+                    this.startStop();
                 }
             }
         }
