--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body onload="init()">
 
 <!-- Simulate a smartphone / tablet -->
-<div class="mobile-container">
+<div class="mobile-containerx">
 
 <!-- Top Navigation Menu -->
 <div class="topnav">
