--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <h3>Connection</h3>
   <div class="container">
     <div class="row">
-        <p id="connectingVersion">Cleancab App Version: 1.05</p>
+        <p id="connectingVersion">Cleancab App Version: 1.06</p>
     </div>
     <div class="row">
       <div style="width: 100%;height: 150px;background-image: url('tech/cleancab.png'); background-repeat: no-repeat; background-size: contain; background-position: center;">
@@ -1543,7 +1543,7 @@
 
 if ('serviceWorker' in navigator) 
 {
-  navigator.serviceWorker.register('serviceworker.js', {scope: '/cleancab-tech/'})
+  navigator.serviceWorker.register('serviceworker.js', {scope: '/'})
     .then(function(registration) 
     {
         console.log('ServiceWorker registration successful!');
