Added the chart javascript

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--link rel="stylesheet" type="text/css" href="static/styleph.css"-->
     <!--link rel="manifest" href="static/manifest.json"-->
   </head>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.0.1/dist/chart.umd.min.js"></script>
+  <script src="chart.umd.min.js"></script>
   <body onload="init()">
 
 <!-- Simulate a smartphone / tablet -->
